5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1577_2896.log
== SUBMITION (2019-03-15 21:33:43) 
-- CODE:
# Use este codigo como ponto de partida
melisse
# Leitura de valores de entrada
var = input("melisse") 

# Impressao de saidas
print("melisse")
-- EXECUTION TIME:
0.203033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 2, in <module>
    melisse
NameError: name 'melisse' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:33:48) 
-- CODE:
# Use este codigo como ponto de partida
melisse
# Leitura de valores de entrada
var = input("melisse") 

# Impressao de saidas
print("melisse")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    melisse
NameError: name 'melisse' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:34:30) 
-- CODE:
# Use este codigo como ponto de partida
boomerang
# Leitura de valores de entrada
var = input("boomerang") 

# Impressao de saidas
print("boomerang")
-- EXECUTION TIME:
0.155406
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 2, in <module>
    boomerang
NameError: name 'boomerang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:34:42) 
-- CODE:
# Use este codigo como ponto de partida
boomerang
# Leitura de valores de entrada
var = input("boomerang") 

# Impressao de saidas
print("boomerang")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    boomerang
NameError: name 'boomerang' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:35:51) 
-- CODE:
# Use este codigo como ponto de partida
python
# Leitura de valores de entrada
var = input("python") 

# Impressao de saidas
print("python")
-- EXECUTION TIME:
0.134051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 2, in <module>
    python
NameError: name 'python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:35:56) 
-- CODE:
# Use este codigo como ponto de partida
python
# Leitura de valores de entrada
var = input("python") 

# Impressao de saidas
print("python")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    python
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:36:53) 
-- CODE:
# Use este codigo como ponto de partida
var
# Leitura de valores de entrada
var = input("var") 

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.194364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 2, in <module>
    var
NameError: name 'var' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:36:59) 
-- CODE:
# Use este codigo como ponto de partida
var
# Leitura de valores de entrada
var = input("var") 

# Impressao de saidas
print("var")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:39:07) 
-- CODE:
# Use este codigo como ponto de partida
BOOMERANG
# Leitura de valores de entrada
var = input("BOOMERANG") 

# Impressao de saidas
print(var)("BOOMERANG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    BOOMERANG
NameError: name 'BOOMERANG' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:39:19) 
-- CODE:
# Use este codigo como ponto de partida
BOOMERANG
# Leitura de valores de entrada
var = input("BOOMERANG") 

# Impressao de saidas
print(var)("BOOMERANG")
-- EXECUTION TIME:
0.164123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 2, in <module>
    BOOMERANG
NameError: name 'BOOMERANG' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:39:24) 
-- CODE:
# Use este codigo como ponto de partida
BOOMERANG
# Leitura de valores de entrada
var = input("BOOMERANG") 

# Impressao de saidas
print(var)("BOOMERANG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    BOOMERANG
NameError: name 'BOOMERANG' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:12:20) 
-- CODE:
# Use este codigo como ponto de partida
BOOMERANG
# Leitura de valores de entrada
var = input("BOOMERANG") 

# Impressao de saidas
print(var)("BOOMERANG")
-- EXECUTION TIME:
0.221489
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 2, in <module>
    BOOMERANG
NameError: name 'BOOMERANG' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:12:24) 
-- CODE:
# Use este codigo como ponto de partida
BOOMERANG
# Leitura de valores de entrada
var = input("BOOMERANG") 

# Impressao de saidas
print(var)("BOOMERANG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    BOOMERANG
NameError: name 'BOOMERANG' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:12:57) 
-- CODE:
# Use este codigo como ponto de partida
BOOMERANG
# Leitura de valores de entrada
var = input("BOOMERANG:") 

# Impressao de saidas
print(var)("BOOMERANG")
-- EXECUTION TIME:
0.207166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 2, in <module>
    BOOMERANG
NameError: name 'BOOMERANG' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:13:02) 
-- CODE:
# Use este codigo como ponto de partida
BOOMERANG
# Leitura de valores de entrada
var = input("BOOMERANG:") 

# Impressao de saidas
print(var)("BOOMERANG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    BOOMERANG
NameError: name 'BOOMERANG' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:13:14) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("BOOMERANG:") 

# Impressao de saidas
print(var)("BOOMERANG")
-- EXECUTION TIME:
0.174701
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 6, in <module>
    print(var)("BOOMERANG")
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:13:19) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("BOOMERANG:") 

# Impressao de saidas
print(var)("BOOMERANG")
-- EXECUTION TIME:
0.143062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 6, in <module>
    print(var)("BOOMERANG")
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:13:23) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("BOOMERANG:") 

# Impressao de saidas
print(var)("BOOMERANG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(var)("BOOMERANG")
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:37:49) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("BOOMERANG:") 

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.217762
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:37:54) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("BOOMERANG:") 

# Impressao de saidas
print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:38:03) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("BOOMERANG") 

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.250596
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:38:08) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("BOOMERANG") 

# Impressao de saidas
print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:39:37) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("pato") 

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.157502
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:39:41) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("pato") 

# Impressao de saidas
print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:39:57) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input(pato) 

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.178723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2896/main.py", line 3, in <module>
    var = input(pato) 
NameError: name 'pato' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:40:06) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input(pato) 

# Impressao de saidas
print("var")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = input(pato) 
NameError: name 'pato' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:40:40) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("pato") 

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.217302
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:42:45) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("pato") 

# Impressao de saidas
print("var:")
-- OUTPUT:
var:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:42:49) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var = input("pato") 

# Impressao de saidas
print("var:")
-- EXECUTION TIME:
0.198253
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var:
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:50:54) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var =("pato") 

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.233944
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:50:58) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var =("pato") 

# Impressao de saidas
print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:51:17) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var =input("pato") 

# Impressao de saidas
print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:51:22) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var =input("pato") 

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.155405
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:00:51) 
-- CODE:
# Use este codigo como ponto de partida
# Leitura de valores de entrada
var =input("pato") 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.132941
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
